[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/main/menus/local_game/local_lobby.gd" type="Script" id=1]

[node name="LocalLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddPlayerButton" type="Button" parent="VBoxContainer"]
margin_top = 532.0
margin_right = 1024.0
margin_bottom = 552.0
text = "Add"

[node name="ReadyButton" type="Button" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 1024.0
margin_bottom = 576.0
text = "Ready"

[node name="Leave" type="Button" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Leave"
[connection signal="pressed" from="VBoxContainer/AddPlayerButton" to="." method="_on_add_player_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Leave" to="." method="_on_leave_button_pressed"]
